--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <div class="header">
+      <span class="header__background"></span>
       <div class="container header__container">
         <div class="header__topbar">
           <div class="header__menu">
